Bug 121083 - EDITOR UI Hatch background color not read back from editor
Summary: EDITOR UI Hatch background color not read back from editor
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-10-31 13:19 UTC by Gabor Kelemen (Collabora)
Modified: 2020-02-29 18:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Setting a green color in the Area dialog (34.86 KB, image/png)
2018-10-31 13:19 UTC, Gabor Kelemen (Collabora)
Details
Reopening the same dialog after setting a color (57.84 KB, image/png)
2018-10-31 13:20 UTC, Gabor Kelemen (Collabora)
Details
Example file with green bg color hatch (12.03 KB, application/vnd.oasis.opendocument.text)
2018-10-31 13:20 UTC, Gabor Kelemen (Collabora)
Details
Example file with green bg color hatch in docx (7.31 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-10-31 13:21 UTC, Gabor Kelemen (Collabora)
Details
Reopening the two example files works fine (53.51 KB, image/png)
2018-10-31 13:22 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2018-10-31 13:19:43 UTC
Created attachment 146193 [details]
Setting a green color in the Area dialog

When setting a hatch fill for drawing objects the setting is not being read back from the editor to the dialog.

Steps to reproduce:
1, Insert - Shape - Choose something
2, Format - Text box and shape - Area
3, Tick Background Color checkbox and select some color
4, Reopen the Area dialog. 

The Background Color checkbox is not ticked and the color selector is disabled under it. On closing the window the previously set color disappears.

Note that this does not affect saving to file; saving to both ODF and OOXML works, only the editor and the dialog does not cooperate.

Version: 6.2.0.0.alpha1+
Build ID: b6b31bbb1a9e2272ac77de127825c4ee9f71effa
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); Calc: CL
Comment 1 Gabor Kelemen (Collabora) 2018-10-31 13:20:20 UTC
Created attachment 146194 [details]
Reopening the same dialog after setting a color
Comment 2 Gabor Kelemen (Collabora) 2018-10-31 13:20:56 UTC
Created attachment 146195 [details]
Example file with green bg color hatch

This opens fine
Comment 3 Gabor Kelemen (Collabora) 2018-10-31 13:21:59 UTC
Created attachment 146196 [details]
Example file with green bg color hatch in docx
Comment 4 Gabor Kelemen (Collabora) 2018-10-31 13:22:43 UTC
Created attachment 146197 [details]
Reopening the two example files works fine
Comment 5 Gabor Kelemen (Collabora) 2018-10-31 15:04:39 UTC
We shall bibisect this. First test shows it used to work from 5.3 (new Area dialog  arrival) until 6.0.6, then broke in the 6.1 cycle sometime.
Comment 6 Gabor Kelemen (Collabora) 2018-10-31 15:49:01 UTC
kelemengabo@L61909 ~/bibisect-win32-6.1
$ git bisect log
# bad: [ff0afb9d3c11ad2e431633c6a58b735f30c57762] source 489fb7f5e2297b9451f7084bcb5cf9da823adc26
# good: [29d08f54c2f71ffee4fe12dbb24c5f5cbedecfd2] source 6eeac3539ea4cac32d126c5e24141f262eb5a4d9
git bisect start 'origin/master' 'oldest'
# bad: [56a4d6ec8114e0ee4eaf65ea556b10f6bd322094] source e5fe9cbb421dfc0f373e5ea56c93aab2a149ddcc
git bisect bad 56a4d6ec8114e0ee4eaf65ea556b10f6bd322094
# bad: [764725370f31f47fb33ff38f865df4f517e804de] source 4288c320b236e6f1643846a78618c3ce365aec82
git bisect bad 764725370f31f47fb33ff38f865df4f517e804de
# good: [278cd57835bbb369183780f89486a88a8fd20b73] source cef05fdcf8453cf6a799234de55182d5f51dde70
git bisect good 278cd57835bbb369183780f89486a88a8fd20b73
# bad: [a3fd2a5de70d843c6f3c5136b49a5a9e18dc6a62] source f31ccd18f1b142f8c851e7e219f8bc18b157bc52
git bisect bad a3fd2a5de70d843c6f3c5136b49a5a9e18dc6a62
# good: [f5b6dd02c6e23ead4078f3f8f5c85886e0bc6ef5] source 2c6d6c113177e25b9ae1674c1e8de0b3c8ae1327
git bisect good f5b6dd02c6e23ead4078f3f8f5c85886e0bc6ef5
# good: [f6adf422ec64cd71af7b4867d2cc420ef3e7b0c2] source 5d64ef270b22544a2dcbcaed191050b616d1f956
git bisect good f6adf422ec64cd71af7b4867d2cc420ef3e7b0c2
# bad: [64e06ace58935a6f14f45179c18881248cef23ee] source 38f5e768b0f858f8f990a8f297396821c75d45dc
git bisect bad 64e06ace58935a6f14f45179c18881248cef23ee
# bad: [4c3dbc46550cc36d98eca4e0317e8bb0ac2b7103] source fd8b5d26edb687fcbf96e74c4b07dcc2b1374035
git bisect bad 4c3dbc46550cc36d98eca4e0317e8bb0ac2b7103
# bad: [f4f959008bc9e45aa82cd96d06588026a73143ec] source 7cccb79f541404f6d317da49cee431294b9121c6
git bisect bad f4f959008bc9e45aa82cd96d06588026a73143ec
# bad: [76830b4b9c48abb041f4b448cfc3b7de84fde9d1] source df1a10dafd3a2263d6e46edcaa6e6c0a64a80598
git bisect bad 76830b4b9c48abb041f4b448cfc3b7de84fde9d1
# good: [c03004511fe6d7b245ac2dae10329a05bda22a63] source 33bd6c3e3512bf96376534e116d6f9f60d157be9
git bisect good c03004511fe6d7b245ac2dae10329a05bda22a63
# bad: [5eb4746d6e5a60ffa055245c87bda95ce941c514] source 2b5589f4ee47ccadc625877bc970010c2abd36a9
git bisect bad 5eb4746d6e5a60ffa055245c87bda95ce941c514
# good: [3a658146396ae7a4036e1877959e6dd519c36635] source a967c8f6847cf9cbd6e0f4b9f58f2023e1f92ae5
git bisect good 3a658146396ae7a4036e1877959e6dd519c36635
# first bad commit: [5eb4746d6e5a60ffa055245c87bda95ce941c514] source 2b5589f4ee47ccadc625877bc970010c2abd36a9

https://cgit.freedesktop.org/libreoffice/core/commit/?id=2b5589f4ee47ccadc625877bc970010c2abd36a9

Adding CC to Zolnai Tamás
Comment 7 Gabor Kelemen (Collabora) 2018-10-31 15:58:49 UTC
Workaround on the UI:
- Open the Area tab with Hatching sub-tab, button etc. Bg color is not selected.
- Switch to a different button, e.g. Pattern
- Switch to a different tab, e.g. Shading
- Switch back to the Area tab, then from Pattern button go to Hatch button
- Bg color is selected
Comment 8 Commit Notification 2018-11-01 13:26:24 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/56d799764d394c906936f7a042dfd3e4219d7063%5E%21

tdf#121083: EDITOR UI Hatch background color not read back from editor

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2018-11-02 05:07:08 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/925d71995028dd0fa7fe0e120a8cf6a26960641b%5E%21

tdf#121083: EDITOR UI Hatch background color not read back from editor

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.