tdf#121083: EDITOR UI Hatch background color not read back from editor

Change-Id: Ic64fda8184a4cac244fe992dd72db9d67d35870c
Reviewed-on: https://gerrit.libreoffice.org/62735
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Tamás Zolnai <tamas.zolnai@collabora.com>